# ceibal

./: .env.example  .gitignore  CLAUDE.md  README.ME  USUARIOS.md  docker-compose.yml  package-lock.json  package.json
apps/api/: API_REFERENCE.md  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run.py  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3e195500d64d_add_activity_reading_text.py  56056c40e5b1_add_user_sub.py  9639de0a572a_add_course_uuid.py  a0d1bf95ed0e_initial_schema.py  a1b2c3d4e5f6_add_student_email_and_cognito_settings.py  b2dae5f3247c_add_student_uuid_and_activity_fields.py  c3f8a2d91e04_add_submissions_and_chat.py  d4e9b1c72f05_add_submission_type.py  e5f0c2d83a06_add_submission_id_to_activities.py  eba0f47d249f_add_evaluation_criteria_to_activities.py  f6a1d3e94b07_add_image_data_to_submissions.py  g7b2e4f05c18_add_generated_at_to_ai_diagnoses.py
apps/api/app/: config.py  database_async.py  main.py  mock_data.py  models.py  seed.py
apps/api/app/auth/: cognito.py  dependencies.py  jwt.py
apps/api/app/models/: __init__.py  chat.py  existing.py  submission.py
apps/api/app/pipelines/audio_pipeline/: call1.py  (+5 more)
apps/api/app/routers/: admin.py  audio_analyze.py  auth.py  chat.py  courses.py  dashboard.py  handwrite_analyze.py  handwrite_analyze_aws.py  me.py  process.py  students.py  submissions.py
apps/api/app/schemas/: chat.py  submission.py
apps/api/app/services/: audio_analyze.py  audio_analyze_aws.py  chat_service.py  diagnosis_service.py  handwrite_analyze.py  handwrite_analyze_aws.py  submission_service.py
(+157 files in other folders)
